--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "nodeportfolio-v1.0",
-  "version": "2.0.0",
-  "private": true,
-  "description": "",
-  "scripts": {
-    "start": "nodemon ./bin/www",
-    "go": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "connect-mongo": "^3.2.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
-    "ejs": "~2.6.1",
-    "ejs-lint": "^0.3.0",
-    "express": "~4.16.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.17.0",
-    "fs": "0.0.1-security",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "node-fetch": "^2.6.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7"
-  },
-  "author": "Trevor Njeru",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.19.4"
-  }
+    "name": "nodeportfolio-v1.0",
+    "version": "2.0.0",
+    "private": true,
+    "description": "",
+    "scripts": {
+        "start": "node ./bin/www",
+        "go": "nodemon ./bin/www"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "connect-mongo": "^3.2.0",
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "dotenv": "^8.1.0",
+        "ejs": "~2.6.1",
+        "ejs-lint": "^0.3.0",
+        "express": "~4.16.1",
+        "express-flash": "0.0.2",
+        "express-session": "^1.17.0",
+        "fs": "0.0.1-security",
+        "http-errors": "~1.6.3",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.7.5",
+        "morgan": "~1.9.1",
+        "multer": "^1.4.2",
+        "node-fetch": "^2.6.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
+        "path": "^0.12.7"
+    },
+    "author": "Trevor Njeru",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^1.19.4"
+    }
 }
