--- a/package.json
+++ b/package.json
@@ -13,27 +13,30 @@
         "lint:ejs": "ejslint view/layout.ejs"
     },
     "dependencies": {
+        "@popperjs/core": "^2.4.0",
         "aws-sdk": "^2.656.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "bootstrap": "^4.4.1",
-        "connect-mongo": "^3.2.0",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
-        "debug": "~2.6.9",
-        "ejs": "~2.6.1",
+        "debug": "^2.6.9",
+        "ejs": "^2.7.4",
         "ejs-lint": "^0.3.0",
-        "express": "~4.16.1",
+        "express": "^4.16.4",
+        "express-ejs-layouts": "^2.5.0",
         "express-flash": "0.0.2",
         "express-session": "^1.17.0",
+        "express-sessions": "^1.0.6",
         "express-validation": "^3.0.2",
         "fs": "0.0.1-security",
-        "http-errors": "~1.6.3",
+        "http-errors": "^1.7.3",
+        "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "mongoose": "^5.9.9",
-        "morgan": "~1.9.1",
+        "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "node-fetch": "^2.6.0",
         "passport": "^0.4.1",
@@ -51,6 +54,7 @@
         "eslint-config-google": "^0.14.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-ejs": "0.0.2",
+        "eslint-plugin-prettier": "^3.1.3",
         "gulp": "^4.0.2",
         "gulp-sass": "^4.0.2",
         "jshint": "^2.11.0",
